--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-line1
-line2
-test
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>ElkJug</h1>
+    <p>body body body......................</p>
+    <p>body2, body2, body2.................</p>
+</body>
+</html>
